-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.3, 5.15.0
-
None
-
-
f7f50557023f19780f6d08514270b978ca532975 (qt/qtbase/dev) 47fbaf061f32c47ccd5dbbf8b19d695222b21795 (qt/qtbase/5.15)
-
Da Vinci sprint 11
Should be reproducible from any platform. I am using:
$ qmake -v
QMake version 3.1
Using Qt version 5.11.3 in /usr/lib/arm-linux-gnueabihf
$ uname -a
Linux raspberrypi 4.19.118-v7l+ #1311 SMP Mon Apr 27 14:26:42 BST 2020 armv7l GNU/Linux
Found in many versions and seems to be still present in 5.15 (and dev: https://github.com/qt/qtbase/blob/dev/examples/widgets/mainwindows/mainwindow/colorswatch.cpp). In colorswatch.cpp, void ColorDock::changeSizeHints() the wrong result value is set for accept. Clicking "OK" does not result in any changes. Change:
connect(buttonBox, &QDialogButtonBox::accepted, &dialog, &QDialog::reject);
to:
connect(buttonBox, &QDialogButtonBox::accepted, &dialog, &QDialog::accept);
With the update, clicking "OK" allows sizeHint updates.
| For Gerrit Dashboard: QTBUG-85009 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 305324,2 | Example: Connect to correct slot | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 305453,2 | Example: Connect to correct slot | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |