examples/widgets/mainwindows/mainwindow/colorswatch.cpp
@@ -233,7 +233,7 @@ void ColorDock::changeSizeHints()
 
     QDialogButtonBox *buttonBox = new QDialogButtonBox(QDialogButtonBox::Ok | QDialogButtonBox::Cancel, this);
     connect(buttonBox, &QDialogButtonBox::rejected, &dialog, &QDialog::reject);
-    connect(buttonBox, &QDialogButtonBox::accepted, &dialog, &QDialog::reject);
+    connect(buttonBox, &QDialogButtonBox::accepted, &dialog, &QDialog::accept);
 
     topLayout->addWidget(buttonBox);
 
